<resources>
    <string name="app_name">CoffeeShop</string>
    <string name="insert_data">INSERT DATA</string>
    <string name="fetch_data">FETCH DATA</string>
    <string name="hint_drink">Enter drink name</string>
    <string name="hint_type">Enter type</string>
    <string name="hint_price">Enter price</string>
    <string name="save_date">SAVE DATA</string>
    <string name="insert_drink_title">NEW DRINK</string>
    <string name="card_title">Drink Title</string>
    <string name="card_description">Drink Description</string>

    <string name="drink_id">Drink ID</string>
    <string name="drink_name">Drink Name</string>
    <string name="drink_type">Drink Type</string>
    <string name="drink_price">Drink Price</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="drink_detail_title">Drink Detail</string>

</resources>